Version 2.02.179 -
====================================
  Add the report field "shared".
  Enable automatic metadata consistency repair on a shared VG.
  Fix pvremove force on a PV with a shared VG.
  Fixed vgimportclone of a PV with a shared VG.
  Enable previously disallowed thin/cache commands in shared VGs.
  Enable metadata-related changes on LVs active with shared lock.
  Do not continue trying to use a device that cannot be opened.
  Fix problems opening a device that fails and returns.
  Use versionsort to fix archive file expiry beyond 100000 files.

Version 2.02.178 - 13th June 2018
=================================

Version 2.02.178-rc1 - 24th May 2018
====================================
  Add libaio dependency for build.
  Remove lvm1 and pool format handling and add filter to ignore them.
  Move some filter checks to after disks are read.
  Rework disk scanning and when it is used.
  Add new io layer and shift code to using it.
  Fix lvconvert's return code on degraded -m raid1 conversion.
  --enable-testing switch for ./configure has been removed.
  --with-snapshots switch for ./configure has been removed.
  --with-mirrors switch for ./configure has been removed.
  --with-raid switch for ./configure has been removed.
  --with-thin switch for ./configure has been removed.
  --with-cache switch for ./configure has been removed.
  Include new unit-test framework and unit tests.
  Extend validation of region_size for mirror segment.
  Reload whole device stack when reinitilizing mirror log.
  Mirrors without monitoring are WARNING and not blocking on error.
  Detect too big region_size with clustered mirrors.
  Fix evaluation of maximal region size for mirror log.
  Enhance mirror log size estimation and use smaller size when possible.
  Fix incorrect mirror log size calculation on 32bit arch.
  Enhance preloading tree creating.
  Fix regression on acceptance of any LV on lvconvert.