@@ -1,5 +1,6 @@
 Version 2.02.179 -
 ====================================
+  Allow forced vgchange to lock type none on clustered VG.
   Add the report field "shared".
   Enable automatic metadata consistency repair on a shared VG.
   Fix pvremove force on a PV with a shared VG.
